<resources>
    <string name="app_name">resume</string>
    <string name="mail">Email</string>
    <string name="mdp">mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="inscription"><u>Inscription</u></string>
    <string name="mdpOublier"><u>Mdp oublié</u></string>
    <string name="bienvenu">BIENVENUE</string>
    <string name="ou">ou</string>
    <string name="name">Name</string>
    <string name="forgotpsw">Did you forgot your password ?</string>
    <string name="newpsw">New password</string>
    <string name="sndPsw">send password</string>
    <string name="resume">RESUME</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>