<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="authentif.ResetPassword">

    <TextView
        android:id="@+id/resetPsw_question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/forgotpsw"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <EditText
        android:id="@+id/ResetPsw_mail_Edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/mail"
        android:inputType="textWebEmailAddress|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resetPsw_question_text"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/resetPsw_question_text"
        app:layout_constraintTop_toBottomOf="@+id/resetPsw_question_text"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/ResetPsw_Npsw_Edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/newpsw"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintEnd_toEndOf="@+id/ResetPsw_mail_Edit"
        app:layout_constraintStart_toStartOf="@+id/ResetPsw_mail_Edit"
        app:layout_constraintTop_toBottomOf="@+id/ResetPsw_mail_Edit" />

    <Button
        android:id="@+id/ResetPasw_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sndPsw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/ResetPsw_Npsw_Edit"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>