<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <EditText
        android:id="@+id/signin_nom_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <EditText
        android:id="@+id/signin_mail_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signin_nom_editText"
        app:layout_constraintStart_toStartOf="@+id/signin_nom_editText"
        app:layout_constraintTop_toBottomOf="@+id/signin_nom_editText" />

    <EditText
        android:id="@+id/signin_mdp_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:ems="10"
        android:hint="@string/mdp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signin_mail_EditText"
        app:layout_constraintStart_toStartOf="@+id/signin_mail_EditText"
        app:layout_constraintTop_toBottomOf="@+id/signin_mail_EditText" />

    <EditText
        android:id="@+id/signin_mdp2_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:ems="10"
        android:hint="@string/mdp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signin_mdp_editText"
        app:layout_constraintStart_toStartOf="@+id/signin_mdp_editText"
        app:layout_constraintTop_toBottomOf="@+id/signin_mdp_editText" />

    <Button
        android:id="@+id/signin_connexion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/signin_mdp2_editText"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>